tests/script_errors/lexer_heredoc_interpolation3/error.txt
Error: 
    2 | let x = """
    3 | #{""";
      | ^^^^^^ It looks like you forgot to terminate a string interpolation with a closing '}'
      |        NOTE: Did you mean to write a literal '#{' ? Escape it as '\#{'.